# AI-Monetization-Case-Study

./: .env.example  .gitignore  GREEN_RUN_CHECKLIST.md  NOTICES.md  README.md  TRACE_CLEANUP_NOTES.md  pyproject.toml  requirements.txt
deprecated/scripts/: build_cusips.py  build_spreads.py  build_weekly_target.py  finra_discover.py  ingest_trace.py  pipeline_trace_stage1_targets.py  select_bonds.py  test_finra_token.py
reports/: macro_events_2025.yaml
reports/figure_inputs/: macro_events_2025.yml
reports/white_paper/: white_paper_final.md
scripts/: README.md  aggregate_weekly_features.py  build_cap_structure.py  build_fragility.py  build_issuer_equity_features.py  build_model_dataset.py  build_regime.py  generate_report_figures.py  ingest_companyfacts.py  ingest_equity.py  ingest_market.py  ingest_sec.py  ingest_sec_submissions.py  ingest_ust.py  init_db.py  model_report_quick.py  pipeline_edgar_stage1_ingest.py  pipeline_edgar_stage2_features_targets.py  pipeline_edgar_stage3_model_train.py  pipeline_stage2_features.py  run_fragility.py  run_migrations.py  run_scenarios.py  seed_issuers.py  seed_issuers_edgar.py  summarize_findings.py  train_spread_models.py
src/config/: issuer_cik.py  structure_opacity.py  universe.py
src/db/: db.py  schema.sql
src/ingest/: ingest_equity.py  ingest_market.py  ingest_sec_fundamentals.py  ingest_ust.py  output_manifests.py
src/models/: build_regime_labels.py  save_predictions.py  shap_explain.py  train_credit_proxy_xgb.py  train_spread_xgb.py
src/reporting/: __init__.py  figures.py  plot_style.py
src/sec/: __init__.py  (+2 more)
(+44 files in other folders)
