[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-credit-crisis"
version = "0.1.0"
requires-python = ">=3.10"
description = "AI Credit Crisis Case Study - EDGAR-first credit risk analysis"
readme = "README.md"
dependencies = [
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

